Add CSS Property assertion

--- a/fixture/assert.html
+++ b/fixture/assert.html
@@ -3,9 +3,15 @@
 <head>
 <meta charset="utf-8">
 <title>Sample</title>
+<style>
+.foo {
+  color: red;
+  font-size: 14px;
+}
+</style>
 </head>
 <body>
 <div class="foo bar
-                baz" data-foo="bar" data-bar="abc"></div>
+                baz" data-foo="bar" data-bar="abc">foo</div>
 </body>
 </html>
