Add length assertion

--- a/fixture/assert.html
+++ b/fixture/assert.html
@@ -13,5 +13,11 @@
 <body>
 <div class="foo bar
                 baz" data-foo="bar" data-bar="abc">foo</div>
+
+<ul>
+  <li>foo</li>
+  <li>bar</li>
+  <li>baz</li>
+</ul>
 </body>
 </html>
